# omnigent-graph

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: polly-memory.yaml
agents/_includes/: memory-tool.yaml
docs/: SPEC-memory-block.md  WRITEUP.md  upstream-issue-draft.md
docs/adr/: 0001-host-level-mcp-server.md  0002-explicit-capture-policy-experimental.md
sample-app/: README.md
sample-app/app/: __init__.py  auth.py
sample-app/tests/: test_auth.py
scripts/: seed.py
scripts/verify/: 01_backend_auth.py  05_cross_run_recall.py  VERIFY.md
scripts/verify/agents/: egress_check.yaml  session_check.yaml
src/omnigent_neo4j_memory/: __init__.py  helpers.py  serve.py
src/omnigent_neo4j_memory/experimental/: __init__.py  policy.py
src/omnigent_neo4j_memory/prompts/: __init__.py  coder.md  reviewer.md
tests/: test_helpers.py  test_integration_neo4j.py  test_policy.py  test_serve.py
