[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnigent-neo4j-memory"
version = "0.1.0"
description = "Graph-native, cross-session, cross-agent memory for Omnigent agents, backed by neo4j-agent-memory / NAMS."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Will Lyon" }]
keywords = ["omnigent", "neo4j", "agent-memory", "mcp", "knowledge-graph", "ai-agents", "nams"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # The memory backend + its MCP server. We wrap, not reimplement.
    "neo4j-agent-memory[mcp]>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# Thin wrapper that launches the host-level shared MCP sidecar (see ADR-0001).
omnigent-neo4j-memory = "omnigent_neo4j_memory.serve:main"

[project.urls]
Homepage = "https://github.com/johnymontana/omnigent-graph"
Repository = "https://github.com/johnymontana/omnigent-graph"
"Neo4j Agent Memory" = "https://neo4j.com/labs/agent-memory/"
Omnigent = "https://omnigent.ai/"

[tool.hatch.build.targets.wheel]
packages = ["src/omnigent_neo4j_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Neo4j/NAMS backend (not run in the default unit job)",
]
